# hacktist

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yaml
act-utils/: Dockerfile  README.md  hacdump.sh  pyproject.toml
act-utils/ACT/: inspect.py  main.py  visualize.py
examples/: buffer-hse.hac  run.chpsim
hackt_docker/: Dockerfile  install_hackt.sh
hackt_docker/hackt/test/lib/: alternator-1of2-01.hac
hackt_docker/hackt/test/net/: fet-type-19.hac  non-CMOS-05.hac
hackt_docker/hackt/test/prsim/: excl-rings-03.prsimrc  excl-rings-03.prsimrc-expect  half-celem-01.prsimrc  interference-07.prsimrc-expect  interference-08.prsimrc  interference-08.prsimrc-expect
hackt_docker/hackt/test/prsim/vpi/: and_tree.v
local/: README
test/: POM-index-filter.awk
test/lib/: stable-test-short.prsimrc
test/net/: fet-type-18.spice-expect
test/parser/prs/: iskeeper-01.hac  spec-02.hac
test/prsim/: cbit-11.prsimrc  driven-04.prsimrc  interference-07.prsimrc  pcfb-test-a-01.prsimrc  precharge-d.hac  precharge-e.hac
